# monitoring_dashboard

./: .gitignore  README.md  monitoring_dashboard.py  pyproject.toml
.bmad-core/: install-manifest.yaml
docs/: DEV_REPORT_2026-01-17.md  architecture.md  brainstorming-session-results.md  front-end-spec.md  prd.md
docs/qa/assessments/: architecture-test-design-20260117.md
docs/stories/: 1.1.project-setup.md  1.2.panel-layout.md  1.3.keyboard-navigation.md  1.4.help-overlay.md  1.5.system-health-data.md  1.6.system-health-panel.md  1.7.panel-expansion.md  2.1.storage-data.md  2.2.storage-panel.md  2.3.battery-data.md  2.4.bluetooth-data.md  2.5.devices-panel.md  2.6.memory-history.md  3.1.logs-data.md  3.2.logs-panel.md  3.3.clipboard-copy.md  3.4.system-info-data.md  3.5.info-bar.md  3.6.alert-engine.md  3.7.visual-alerts.md  3.8.bluetooth-disconnect.md  IMPLEMENTATION_REPORT.md  epic-1-foundation-system-health.md  epic-2-storage-devices.md  epic-3-logs-info-alerts.md
src/monitor_dashboard/: __init__.py  __main__.py  app.py  constants.py
src/monitor_dashboard/data_sources/: __init__.py  apt.py  battery.py  bluetooth.py  logs.py  process.py  storage.py  system_health.py  system_info.py
src/monitor_dashboard/models/: __init__.py  battery.py  logs.py  metrics.py  process.py  system_info.py
src/monitor_dashboard/panels/: __init__.py  base.py  devices.py  info_bar.py  logs.py  processes.py  (+3 more)
tests/: __init__.py
tests/integration/: __init__.py  test_help.py  test_navigation.py  test_panels.py
tests/unit/: __init__.py  test_formatting.py  test_history_buffer.py
(+16 files in other folders)
