[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monitor-dashboard"
version = "0.1.0"
description = "A Linux system monitoring dashboard built with Textual"
authors = [
    {name = "Development Team", email = "dev@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.1",
    "psutil>=5.9.8",
    "pyyaml>=6.0.1",
    "pydbus>=0.6.0",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-textual-snapshot>=0.4.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
monitor-dashboard = "monitor_dashboard.__main__:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
